--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Logo</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="url">Link 1</a>
+                </li>
+                <li>
+                    <a href="url">Link 2</a>
+                </li>
+                <li>
+                    <a href="url">Link 3</a>
+                </li>
+            </ul>  
+            <a href="url">Login</a>
+        </nav>
+        <div class="myDiv">
+            <h2>Headline</h2>
+            <p>Some paragraph text below the headline</p>
+            <article>
+                <h2>Article headline</h2>
+                <p>Paragraph text 1</p>
+                <p>Paragraph text 2</p>
+            </article>
+            <article>
+                <h2>Article headline</h2>
+                <p>Paragraph text 1</p>
+                <p>Paragraph text 2</p>
+                <p>Paragraph text 3</p>
+                <p>Paragraph text 4</p>
+                <img src="picture.jpg" alt="Picture">
+            </article>
+        </div>
+        <aside>
+            <h2>headline for aside</h2>
+            <ul>
+                <li>
+                    <h3>nation 1</h3>
+                    <ol>
+                        <li>
+                            <p>city 1M</p>
+                        </li>
+                        <li>
+                            <p>city 400k</p>
+                        </li>
+                        <li>
+                            <p>city 223k</p>
+                        </li>
+                    </ol>
+                </li>
+                <li>
+                    <h3>nation 2</h3>
+                    <ol>
+                        <li>
+                            <p>city 5M</p>
+                        </li>
+                        <li>
+                            <p>city 2M</p>
+                        </li>
+                        <li>
+                            <p>city 621k</p>
+                        </li>
+                    </ol>
+                </li>
+                <li>
+                    <h3>nation 3</h3>
+                    <ol>
+                        <li>
+                            <p>city 10M</p>
+                        </li>
+                        <li>
+                            <p>city 7M</p>
+                        </li>
+                        <li>
+                            <p>city 3M</p>
+                        </li>
+                    </ol>
+                </li>
+            </ul>  
+        </aside>
+        <footer>
+            <span>&copy;Shahab Garoosi</span>
+        </footer>
+    </body>
+</html>
