--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <a href="url">Link 3</a>
                 </li>
             </ul>  
-            <a href="url">Login</a>
         </nav>
+        <a href="url">Index</a>
         <div class="myDiv">
             <h2>Headline</h2>
             <p>Some paragraph text below the headline</p>
