--- a/Login.html
+++ b/Login.html
@@ -21,8 +21,7 @@
         </nav>
         <a href="url">Login</a>
         <div class="myDiv">
-            <h2>Login</h2>
-            <p>Some paragraph text below the headline</p>
+            <h2>User login</h2>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username">
             <label for="password">Password:</label>
