--- a/index.html
+++ b/index.html
@@ -3,32 +3,33 @@
     <head>
         <meta charset="UTF-8">
         <title>Document</title>
+        <link rel="stylesheet" href="MyStyle.css" />
     </head>
-    <body>
-        <h1>Logo</h1>
+    <body class="gridIndex">
+        <h1 class="siteName">Logo</h1>
         <nav>
             <ul>
-                <li>
+                <li class="menuItem1">
                     <a href="url">Link 1</a>
                 </li>
-                <li>
+                <li class="menuItem2">
                     <a href="url">Link 2</a>
                 </li>
-                <li>
+                <li class="menuItem3">
                     <a href="url">Link 3</a>
                 </li>
             </ul>  
         </nav>
-        <a href="url">Index</a>
-        <div class="myDiv">
-            <h2>Headline</h2>
-            <p>Some paragraph text below the headline</p>
-            <article>
+        <a class="login" href="url">Login</a>
+        <div class="divIndex">
+            <h2 class="mainHeader">Headline</h2>
+            <p class="subText">Some paragraph text below the headline</p>
+            <article class="article1">
                 <h3>Article headline</h3>
                 <p>Paragraph text 1</p>
                 <p>Paragraph text 2</p>
             </article>
-            <article>
+            <article class="article2">
                 <h3>Article headline</h3>
                 <p>Paragraph text 1</p>
                 <p>Paragraph text 2</p>
@@ -37,7 +38,7 @@
                 <img src="picture.jpg" alt="Picture">
             </article>
         </div>
-        <aside>
+        <aside class="sideContent">
             <h3>headline for aside</h3>
             <ul>
                 <li>
@@ -84,7 +85,7 @@
                 </li>
             </ul>  
         </aside>
-        <footer>
+        <footer class="footer">
             <span>&copy;Shahab Garoosi</span>
         </footer>
     </body>
