--- a/Login.html
+++ b/Login.html
@@ -20,7 +20,7 @@
                 </li>
             </ul>  
         </nav>
-        <a class="index" href="url">Index</a>
+        <a class="index" href="http://127.0.0.1:5500/index.html">Index</a>
         <div class="divLogin">
             <h2 class="header">User login</h2>
             <form id="rcorners" class="form">
