--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </li>
             </ul>  
         </nav>
-        <a class="login" href="url">Login</a>
+        <a class="login" href="http://127.0.0.1:5500/Login.html">Login</a>
         <div class="divIndex">
             <h2 class="mainHeader">Headline</h2>
             <p class="subText">Some paragraph text below the headline</p>
